--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,8 +34,8 @@ a:hover {
 }
 
 .logo {
-    font-family: "OpenSans", Arial, sans-serif;
-    font-size: 20px;
+    font-family: "Tangerine", Arial, sans-serif;
+    font-size: 36px;
     text-decoration: none;
     margin-right: 80px;
 }
