--- a/public/css/main.css
+++ b/public/css/main.css
@@ -221,7 +221,6 @@ input, textarea {
 
 .inpt-short {
     width: 220px;
-    margin-bottom: 10px;
     margin-right: 20px;
 }
 
@@ -253,6 +252,12 @@ input, textarea {
 
 #blog-body {
     height: 280px;
+}
+
+.posts {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 /* Authentication rules */
