--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,43 +1,41 @@
-@font-face {
-  font-family: 'OpenSans';
-  src: url('../fonts/OpenSans-Semibold.ttf');
-}
-
 body {
     margin: 0;
     padding: 0;
     -webkit-font-smoothing: antialiased;
+    font-family: Helvetica, sans-serif;
     color: #111;  
 }
 
 a {
     color: #111;
+    text-decoration: none;
 }
 
 .header {
     display: flex;
     width: 940px;
-    height: 80px;
+    height: 100px;
     align-items: center;
     margin: 0 auto;
 }
 
 .header-link {
-    font-family: "OpenSans", Arial, sans-serif;
-    text-decoration: none;
     margin-left: 20px;
-    font-size: 13px;
+    font-size: 15px;
+    font-weight: 600;
 }
 
 .logo {
-    font-family: "Tangerine", Arial, sans-serif;
     font-size: 36px;
-    text-decoration: none;
+    line-height: 32px;
+    font-weight: 600;
     margin-right: 80px;
 }
 
 .btn {
-    font-family: "OpenSans", Arial, sans-serif;
+    font-family: Helvetica;
+    font-size: 15px;
+    font-weight: 600;
     padding: 5px 15px;
     background: #fff;
     color: #111;
@@ -47,7 +45,6 @@ a {
 .btn:hover {
     background: #111;
     color: #fff;
-    text-decoration: none;
 }
 
 .section {
@@ -130,40 +127,40 @@ a {
 }
 
 .splash-content {
-    background: rgba(255, 255, 255, .9);
-    padding: 40px;
+    border: 4px solid #111;
+    background-color: #fff;
+    padding: 40px 80px;
     width: 400px;
 }
 
 h2 {
-    font-family: 'Asar', georgia;
-    font-weight: normal;
+    font-family: Helvetica;
+    font-weight: bold;
     font-size: 28px;
-    line-height: 28px;
-    margin: 0;
+    margin: 0 0 10px 0;
     padding: 0;
 }
 
 h3 {
-    font-family: 'Asar', georgia;
-    font-weight: normal;
+    font-family: Helvetica;
+    font-weight: lighter;
     font-size: 20px;
     line-height: 28px;
-    margin: 0;
+    margin: 0 0 10px 0;
     padding: 0;  
 }
 
 h4 {
-    font-family: 'OpenSans';
+    font-family: Helvetica;
     text-transform: uppercase;
     font-size: 13px;
     line-height: 13px;
 }
 
 p {
-    font-family: 'Asar', georgia;
-    font-size: 14px;
-    line-height: 20px;
+    font-family: Georgia;
+    font-size: 20px;
+    line-height: 28px;
 }
 
 .column {
@@ -173,8 +170,8 @@ p {
 footer {
     align-items: center;
     height: 80px;
-    font-size: 12px;
-    font-family: "OpenSans", Arial, sans-serif;
+    font-size: 13px;
+    font-weight: bold;
 }
 
 .footer-link {
@@ -191,11 +188,17 @@ footer {
     color: #edd216;
 }
 
+form {
+    margin: 0;
+}
+
 input, textarea {
-    font-family: "OpenSans", Arial, sans-serif;
+    font-family: Helvetica;
+    font-size: 15px;
     display: block;
     padding: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    border: 1px solid #999;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
@@ -260,6 +263,11 @@ input, textarea {
     padding: 0;
 }
 
+.content-list li {
+    border-bottom: 1px solid #111;
+    padding: 20px 0 20px 0;
+}
+
 /* Authentication rules */
 .auth .login-link,
 .dashboard-link,
@@ -270,4 +278,68 @@ input, textarea {
 .auth .dashboard-link,
 .auth .logout-link {
     display: block;
+}
+
+.box {
+    background: #ddd;
+    border: 1px solid #111;
+    padding: 20px;
+}
+
+.instructions {
+    list-style: none;
+    margin: 0;
+}
+
+.instructions li {
+    padding-bottom: 10px;
+}
+
+#thumbs ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.thumb-photo {
+    height: 120px;
+}
+
+.post-thumb {
+    width: 220px;
+}
+
+.post-image {
+    height: 300px;
+}
+
+.ordered-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.ordered-list li {
+    counter-increment: ind-counter;
+    padding: 20px 0;
+    display: flex;
+    border-bottom: 1px solid #111;
+}
+
+.ordered-list li::before {
+    content: counter(ind-counter, decimal-leading-zero);
+    font-size: 40px;
+    font-weight: lighter;
+    padding: 0 20px;
+}
+
+.top-line {
+    border-top: 3px solid #111;
+}
+
+.page-header {
+    padding: 20px 0;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #111;
+    border-top: 3px solid #111;
 }
