--- a/public/css/main.css
+++ b/public/css/main.css
@@ -196,9 +196,10 @@ input, textarea {
     font-family: Helvetica;
     font-size: 15px;
     display: block;
-    padding: 10px;
+    padding: 10px 0;
     margin-bottom: 10px;
-    border: 1px solid #999;
+    border: none;
+    border-bottom: 2px solid #111;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
