--- a/www/css/main.css
+++ b/www/css/main.css
@@ -212,6 +212,7 @@ input, textarea {
 
 textarea {
     border: 1px solid #111;
+    padding: 10px;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
