--- a/www/css/main.css
+++ b/www/css/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 a {
-    color: #111;
+    color: #24afa8;
     text-decoration: none;
 }
 
@@ -23,6 +23,7 @@ a {
     margin-left: 20px;
     font-size: 15px;
     font-weight: 600;
+    color: #111;
 }
 
 .btn {
@@ -30,10 +31,9 @@ a {
 }
 
 .logo {
-    font-size: 36px;
-    line-height: 32px;
-    font-weight: 600;
+    width: 280px;
     margin-right: 80px;
+    fill: #111;
 }
 
 .btn {
@@ -41,9 +41,9 @@ a {
     font-size: 16px;
     font-weight: 600;
     padding: 5px 15px;
-    background: #fff;
-    color: #111;
-    border: 2px solid #111;
+    background: #59bfc7;
+    color: #fff;
+    border: none;
 }
 
 .dashboard-link {
@@ -51,8 +51,7 @@ a {
 }
 
 .btn:hover {
-    background: #111;
-    color: #fff;
+    background: #56aeb6;
 }
 
 .section {
@@ -125,7 +124,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("../img/bg.jpg");
+    background-image: url("../img/splash.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -184,6 +183,7 @@ footer {
 .footer-link {
     text-decoration: none;
     margin-right: 20px;
+    color: #111;
 }
 
 .selected-link::before {
@@ -304,7 +304,7 @@ input[type=file] {
 }
 
 .box {
-    background: #ddd;
+    background: #f8f8f8;
     border: 1px solid #111;
     padding: 20px;
 }
@@ -431,4 +431,8 @@ input[type=file] {
 .editor-thumbs {
     margin: 0;
     padding: 0;
+}
+
+.home-img {
+    width: 300px;
 }
